tests/ui/parser/mismatched-braces/missing-close-brace-in-impl-trait.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing-close-brace-in-impl-trait.rs:13:52
   |
LL | impl T for () {
   |               - unclosed delimiter
...
LL |
   |                                                    ^

error: aborting due to previous error

