tests/ui/parser/mismatched-braces/missing-close-brace-in-impl-trait.rs
fn main() {}

impl T for () {

fn foo(&self) {}

trait T {
    fn foo(&self);
}

pub(crate) struct Bar<T>();

//~ ERROR this file contains an unclosed delimiter
